--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,16 +2,16 @@
 <div>
     <article ng-repeat="post in posts">
                 <header>
-                    <h2><a href="#">{{post.titulo}}</a></h2>
-                    <p>
-                            &#8226; 
-                            {{post.data}}
-                    </p>
+                    <h2><a  href="{{post.link}}" target="{{post.linkTarget}}">{{post.titulo}}</a></h2>
+                    <p>&#8226;  {{post.data}}</p>
                 </header>
                 <div>
                     <p>{{post.descricao}}</p>
                     <br>
-                    <a class="btn" href="#">Continue lendo</a>
+                    <a class="btn" href="{{post.link}}" target="{{post.linkTarget}}">Continue lendo</a>
+
+                    <div class='fb-share-button' data-href="{{post.link}}" layout-align="end"
+                    data-mobile_iframe='true' data-layout='button'></div>
                 </div>
                 <hr/>
     </article>
