--- a/app/views/viewMD.html
+++ b/app/views/viewMD.html
@@ -4,7 +4,6 @@
 
     <hr/>
 
-    <div id="disqus_thread"></div>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <div data-width='100%' class='fb-comments' data-href="{{getUrl()}}" data-numposts='5'></div>
 
 </div>
