Update Layout and MSGs

--- a/app/views/viewMD.html
+++ b/app/views/viewMD.html
@@ -4,6 +4,8 @@
 
     <hr/>
 
-    <div data-width='100%' class='fb-comments' data-href="{{getUrl()}}" data-numposts='5'></div>
+    <div data-width='100%' class='fb-comments' data-href="{{getUrl()}}" data-numposts='5'>
+        Por gentiliza, atualize a página para o carregamento completo dos comentários do Facebook desta publicação.
+    </div>
 
 </div>
