--- a/app/views/home.html
+++ b/app/views/home.html
@@ -10,7 +10,7 @@
                     <br>
                     
                     <a class="btn btn-google" 
-                    href="#/{{post.urlMD}}"
+                    href="https://ronysfreitas.github.io/#/{{post.urlMD}}"
                     ng-if="post.urlMD.length > 0"
                     >Continue lendo</a>
 
